--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -31,7 +31,8 @@ Table Of Content
 /* Default color & font Variables */
 /* End default color & font Variables */
 /* Default style */
-/* Stella Polars blå: #00294f */
+/* Stella Polaris blå: #00294f */
+/* Stella POlaris rød: #d51317 */
 
 body {
   background-color: #f3f6f9;
@@ -39,7 +40,6 @@ body {
   font-size: .815rem;
   font-family: "Roboto", sans-serif;
 }
-
 .live-clock {
   color: #00294f;
   font-size: 20px;
@@ -77,7 +77,6 @@ body {
 .generate-report-btn{
   margin-bottom: 20px;
 }
-
 a {
   transition: .4s;
   -webkit-transition: .4s;
@@ -548,6 +547,27 @@ button:focus {
   color: #fff;
 }
 
+.btn-primary {
+  background-color: #00294f;
+  border-color: #00294f;
+}
+
+.btn-primary:hover {
+  background-color: #00294f;
+  border-color: #00294f;
+  opacity: .7;
+}
+
+.btn-outline-primary {
+  color: #00294f;
+  border-color: #00294f;
+}
+
+.btn-outline-primary:hover {
+  background-color: #00294f;
+  border-color: #00294f;
+}
+
 /* End helper class */
 /* Main content style */
 .main-content {
@@ -591,7 +611,7 @@ button:focus {
 }
 
 .main-content-header .breadcrumb a:hover {
-  color: #d51317;
+  color: #00294f;
 }
 
 .single-sales-card .card-body {
@@ -1136,6 +1156,19 @@ button:focus {
   right: 20px;
 }
 
+.page-link {
+  color: #00294f;
+}
+
+.page-link:hover {
+  color: #000;
+}
+
+.page-item.active .page-link {
+  background-color: #00294f;
+  border-color: #00294f;
+}
+
 /* End search result style */
 /* Notifications page style */
 .notifications-card .noti-card-title {
@@ -1495,6 +1528,13 @@ button:focus {
 .form-content .fp-link:hover {
   color: #00294f;
   text-decoration: underline;
+}
+
+.auth-bg-image {
+  background-image: url("../img/auth-bg-image.jpg");
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 /* End signup page style */
@@ -2213,7 +2253,7 @@ textarea.form-control {
 }
 
 .post-card .media-body h5 a:hover {
-  color: #00294f;
+  color: #00294f
 }
 
 .post-card .media-body p {
@@ -2739,9 +2779,9 @@ textarea.form-control {
 
 .apexcharts-content .toolbar button.active {
   color: #fff;
-  background: #008FFB;
-  border: 1px solid blue;
-  border-bottom: 2px solid blue;
+  background: #00294f;
+  border: 1px solid #00294f;
+  border-bottom: 2px solid #00294f;
 }
 
 /* End Apexcharts content */
@@ -2968,6 +3008,14 @@ textarea.form-control {
 .footer p {
   margin: 0;
   color: #5a5151;
+}
+
+.footer p a {
+  color: #d51317;
+}
+
+.footer p a:hover {
+  text-decoration: underline;
 }
 
 /* End Footer Style */
