--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,18 +1,10 @@
 /* Default color & font Variables */
 /* End default color & font Variables */
-
-/* Stella Polars blå: #00294f */
-
 .top-menu {
-  top: 40px;
+  top: 43px;
   background: #ffffff;
   -webkit-box-shadow: 0px 0 10px rgba(0, 0, 0, 0.08);
           box-shadow: 0px 0 10px rgba(0, 0, 0, 0.08);
-}
-
-.navbar-brand{
-  padding-top: 0.454rem;
-  padding-bottom: 0.454rem;
 }
 
 .top-menu .navbar-brand .large-logo {
@@ -24,8 +16,8 @@
 }
 
 .top-menu .burger-menu {
-  padding-right: 30px;
-  margin-left: 20px;
+  padding-right: 15px;
+  margin-left: 70px;
   cursor: pointer;
   transition: all .50s ease-in-out;
   -webkit-transition: all .50s ease-in-out;
@@ -39,6 +31,46 @@
   margin: 6px 0;
   transition: all .50s ease-in-out;
   -webkit-transition: all .50s ease-in-out;
+}
+
+.top-menu .mega-menu .mega-menu-btn .icon {
+  width: 16px;
+  height: 16px;
+  margin-left: 2px;
+}
+
+.top-menu .mega-menu .dropdown-menu {
+  width: 900px;
+  margin-top: 5px;
+  padding: 15px 10px;
+}
+
+.top-menu .mega-menu .dropdown-menu .title {
+  font-size: 13px;
+  padding: 0 15px 10px;
+  margin: 8px 0 8px;
+  border-bottom: 1px solid #f3ebeb;
+}
+
+.top-menu .mega-menu .dropdown-menu::before, .top-menu .mega-menu .dropdown-menu::after {
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  content: "";
+  position: absolute;
+  left: 8px;
+  width: 10px;
+}
+
+.top-menu .mega-menu .dropdown-menu::before {
+  border-bottom: 5px solid #000;
+  top: -10px;
+  height: 10px;
+}
+
+.top-menu .mega-menu .dropdown-menu::after {
+  border-bottom: 5px solid #fff;
+  top: -9px;
+  height: 9px;
 }
 
 .top-menu .navbar-nav .nav-link {
@@ -88,7 +120,7 @@
 .top-menu .nav-search-form .search-success:active {
   background-color: transparent;
   border-color: transparent;
-  color: #0062cc;
+  color: #00294f;
 }
 
 .top-menu .nav-search-form .search-success:focus {
@@ -96,6 +128,251 @@
           box-shadow: none !important;
 }
 
+.top-menu .right-nav .nav-item {
+  padding-left: 15px;
+}
+
+.top-menu .right-nav .dropdown-menu {
+  left: auto;
+  right: 0;
+}
+
+.top-menu .right-nav .dropdown-menu::before, .top-menu .right-nav .dropdown-menu::after {
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  content: "";
+  position: absolute;
+  right: 8px;
+  width: 10px;
+}
+
+.top-menu .right-nav .dropdown-menu::before {
+  border-bottom: 5px solid #000;
+  top: -10px;
+  height: 10px;
+}
+
+.top-menu .right-nav .dropdown-menu::after {
+  border-bottom: 5px solid #fff;
+  top: -9px;
+  height: 9px;
+}
+
+.top-menu .right-nav .count-info {
+  position: relative;
+  margin-top: 5px;
+}
+
+.top-menu .right-nav .count-info .icon {
+  width: 18px;
+  height: 18px;
+}
+
+.top-menu .right-nav .count-info .ci-number {
+  position: absolute;
+  background: #f75d81;
+  color: #fff;
+  height: 10px;
+  width: 10px;
+  text-align: center;
+  border-radius: 50%;
+  line-height: 22px;
+  font-size: 10px;
+  top: -3px;
+  right: -5px;
+  z-index: 1;
+}
+
+.top-menu .right-nav .count-info .ci-number .ripple {
+  background-color: #f75d81;
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  z-index: -1;
+  right: -6px;
+  top: -6px;
+  opacity: 0;
+  margin: 0;
+  border-radius: 100px;
+  -webkit-animation: ripple 2.8s infinite;
+  animation: ripple 2.8s infinite;
+}
+
+.top-menu .right-nav .count-info .ci-number .ripple:nth-child(2) {
+  animation-delay: .6s;
+  -webkit-animation-delay: .6s;
+}
+
+.top-menu .right-nav .count-info .ci-number .ripple:nth-child(3) {
+  animation-delay: .9s;
+  -webkit-animation-delay: .9s;
+}
+
+@-webkit-keyframes ripple {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+@keyframes ripple {
+  0% {
+    opacity: 1;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+
+.top-menu .dropdown-toggle::after {
+  display: none;
+}
+
+.top-menu .profile-nav-item .menu-profile img {
+  width: 30px;
+  height: 30px;
+  margin-left: 8px;
+}
+
+.top-menu .profile-nav-item .dropdown-item .icon {
+  width: 14px;
+  margin-right: 5px;
+  height: 14px;
+  margin-top: -3px;
+}
+
+.top-menu .dropdown-item {
+  font-size: 13px;
+  padding: 0.40rem 1rem;
+  white-space: pre-wrap;
+  font-weight: 300;
+  color: #797979;
+  position: relative;
+  overflow: hidden;
+}
+
+.top-menu .dropdown-item:hover, .top-menu .dropdown-item:focus {
+  background: #eef5f9;
+  color: #00294f;
+}
+
+.top-menu .dropdown-item:hover::before {
+  content: '';
+  position: absolute;
+  right: -18px;
+  background: #00294f;
+  height: 15px;
+  width: 40px;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(-45deg);
+  bottom: 0;
+}
+
+.top-menu .dropdown-menu {
+  border-radius: 0;
+}
+
+.top-menu .dropdown-menu .dropdown-item.active, .top-menu .dropdown-menu .dropdown-item:active {
+  color: #00294f;
+  background-color: #eef5f9;
+}
+
+.top-menu .dropdown-menu .dropdown-item.active::before, .top-menu .dropdown-menu .dropdown-item:active::before {
+  content: '';
+  position: absolute;
+  right: -18px;
+  background: #00294f;
+  height: 15px;
+  width: 40px;
+  -webkit-transform: rotate(90deg);
+  transform: rotate(-45deg);
+  bottom: 0;
+}
+
+.top-menu .message-box .dropdown-menu {
+  min-width: 260px;
+  padding-top: 0;
+  padding-bottom: 0;
+  text-align: center;
+}
+
+.top-menu .message-box .dropdown-menu .dropdown-item {
+  border-bottom: 1px solid #ebebee;
+  padding: 0.80rem 1rem;
+}
+
+.top-menu .message-box .dropdown-menu .dropdown-item:last-child {
+  border-bottom: none;
+}
+
+.top-menu .message-box .dropdown-menu .dropdown-item .icon {
+  width: 15px;
+  height: 15px;
+}
+
+.top-menu .message-item {
+  position: relative;
+  padding-left: 45px;
+  text-align: left;
+}
+
+.top-menu .message-item .user-pic {
+  position: absolute;
+  left: 0;
+  top: 2px;
+}
+
+.top-menu .message-item .user-pic img {
+  width: 35px;
+  height: 35px;
+}
+
+.top-menu .message-item .user-pic .profile-status {
+  position: absolute;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  right: 0;
+  bottom: 0;
+}
+
+.top-menu .message-item .chat-content .message-title {
+  margin: 0;
+  font-size: 13px;
+}
+
+.top-menu .message-item .chat-content .mail-desc {
+  display: block;
+  color: #474d52;
+  font-size: 13px;
+  margin: 3px 0;
+}
+
+.top-menu .message-item .chat-content .mail-desc .amount {
+  background: #00294f;
+  color: #fff;
+  padding: 8px;
+  border-radius: 30px;
+  font-size: 10px;
+  line-height: 0;
+}
+
+.top-menu .message-item .time {
+  display: block;
+  color: #a1aab2;
+  font-size: 13px;
+  line-height: 1;
+}
 
 .top-menu .toggle-menu {
   margin-left: 30px;
