--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -578,7 +578,7 @@ button:focus {
   padding: 30px 30px 0;
   position: relative;
   min-height: calc(100vh - 62px);
-  padding-left: 250px;
+  padding-left: 250px !important; /* EDIT */ 
   overflow: hidden;
 }
 
