--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -81,6 +81,12 @@ Table Of Content
   display: none;
 }
 
+/* Refresh button */
+.refresh-button {
+  padding: 5px 7px !important;
+  margin-bottom: 5px !important;
+}
+
 
 
 body {
