--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,5 +1,9 @@
 /* Default color & font Variables */
 /* End default color & font Variables */
+
+/* Stella Polaris blå: #00294f */
+/* Stella POlaris rød: #d51317 */
+
 .top-menu {
   top: 43px;
   background: #ffffff;
