--- a/src/components/Navigation/SideMenu/SideMenu.css
+++ b/src/components/Navigation/SideMenu/SideMenu.css
@@ -1,8 +1,9 @@
 /* Default color & font Variables */
 /* End default color & font Variables */
 
-/* Stella Polaris rød: #d51317*/
 /* Stella Polaris blå: #00294f */
+/* Stella POlaris rød: #d51317 */
+
 .sidemenu-area {
   background: #00294f;
   position: fixed;
