--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,4 +1,5 @@
 /*
+Bootstrap
 Table Of Content
 =================================
 * Color system
@@ -34,6 +35,7 @@ Table Of Content
 
 /* Stella Polaris blå: #00294f */
 /* Stella POlaris rød: #d51317 */
+
 /* Edits */
 
 /* Print CSS */
@@ -86,8 +88,6 @@ Table Of Content
   padding: 5px 7px !important;
   margin-bottom: 5px !important;
 }
-
-
 
 body {
   background-color: #f3f6f9;
